--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Defebril</title>
+	<style>
+		html,body,#app,#map{height:100%;}
+
+
+	</style>
 </head>
 <body>
-	<div id="app"></div>
+	<div id="app">
+		<div id="map"></div>
+	</div>
 	<script src="bundle.js"></script>
 </body>
 </html>
