--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Defebril</title>
 	<style>
-		html,body,#app,#map{height:100%;}
+		html,body,#app,#map{height:90%;}
 
 
 	</style>
@@ -12,6 +12,7 @@
 <body>
 	<div id="app">
 		<div id="map"></div>
+		<div id="text"></div>
 	</div>
 	<script src="bundle.js"></script>
 </body>
